fixed argocd application ns to simplify rollout and use default argocd ns for managing/monitoring apps
Signed-off-by: Alen Haric (deusxanima) aharic88@gmail.com

--- a/examples/argocd/linkerd/non-bel/control-plane/linkerd-control-plane.yaml
+++ b/examples/argocd/linkerd/non-bel/control-plane/linkerd-control-plane.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: linkerd-control-plane
-  namespace: linkerd
+  namespace: argocd
   labels:
     type: child
 spec:
