--- a/examples/argocd/linkerd/non-bel/control-plane/linkerd-crds.yaml
+++ b/examples/argocd/linkerd/non-bel/control-plane/linkerd-crds.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: linkerd-crds
-  namespace: linkerd
+  namespace: argocd
   labels:
     type: child
 spec:
