--- a/examples/certs/argocd/cert-manager_argocd_parent_app.yaml
+++ b/examples/certs/argocd/cert-manager_argocd_parent_app.yaml
@@ -4,7 +4,7 @@ metadata:
   name: certs
   labels:
     type: main
-  namespace: cert-manager
+  namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
