enabling auotmated syncing on all argocd apps
Signed-off-by: Alen Haric (deusxanima) aharic88@gmail.com

--- a/examples/argocd/linkerd/non-bel/control-plane/linkerd-control-plane.yaml
+++ b/examples/argocd/linkerd/non-bel/control-plane/linkerd-control-plane.yaml
@@ -22,6 +22,13 @@ spec:
   destination:
     namespace: linkerd
     server: https://kubernetes.default.svc
+  syncPolicy:
+    automated:
+      prune: true
+      allowEmpty: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
   ignoreDifferences:
   - group: ""
     kind: Secret
