--- a/examples/argocd/linkerd/non-bel/control-plane/linkerd-crds.yaml
+++ b/examples/argocd/linkerd/non-bel/control-plane/linkerd-crds.yaml
@@ -17,3 +17,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: linkerd
+  syncPolicy:
+    automated:
+      prune: true
+      allowEmpty: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
