--- a/examples/certs/argocd/cm_apps/cert-manager.yaml
+++ b/examples/certs/argocd/cm_apps/cert-manager.yaml
@@ -20,3 +20,10 @@ spec:
   destination:
     server: 'https://kubernetes.default.svc'
     namespace: cert-manager
+  syncPolicy:
+    automated:
+      prune: true
+      allowEmpty: true
+      selfHeal: true
+    syncOptions:
+      - CreateNamespace=true
