--- a/examples/argocd/linkerd/non-bel/control-plane/linkerd_issuers_and_certs.yaml
+++ b/examples/argocd/linkerd/non-bel/control-plane/linkerd_issuers_and_certs.yaml
@@ -28,7 +28,7 @@ apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: linkerd-identity-issuer
-  namespace: cert-manager
+  namespace: linkerd
 spec:
   ca:
     secretName: linkerd-identity-trust-anchor
