--- a/examples/argocd/linkerd/non-bel/control-plane/linkerd_issuers_and_certs.yaml
+++ b/examples/argocd/linkerd/non-bel/control-plane/linkerd_issuers_and_certs.yaml
@@ -22,6 +22,12 @@ spec:
   privateKey:
     algorithm: ECDSA
   secretName: linkerd-identity-trust-anchor
+  secretTemplate:
+    annotations:
+      reflector.v1.k8s.emberstack.com/reflection-allowed: "true"
+      reflector.v1.k8s.emberstack.com/reflection-allowed-namespaces: "linkerd,cert-manager"
+      reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
+      reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: "linkerd,cert-manager"
 ---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
