Signed-off-by: Alen Haric (deusxanima) aharic88@gmail.com

--- a/examples/argocd/bcloud/bel/bcloud_argocd_parent_app.yaml
+++ b/examples/argocd/bcloud/bel/bcloud_argocd_parent_app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: linkerd-buoyant
+  name: buoyant
   labels:
     type: main
   namespace: argocd
