added debug logging to controlplaneoperator
Signed-off-by: Alen Haric (deusxanima) aharic88@gmail.com

--- a/examples/argocd/bcloud/bel/linkerd-buoyant/linkerd-buoyant.yaml
+++ b/examples/argocd/bcloud/bel/linkerd-buoyant/linkerd-buoyant.yaml
@@ -25,6 +25,8 @@ spec:
         value: U561gsnZ9PCb7MG-
       - name: api.clientSecret
         value: 0677edf6dcd92c2726090e492b633deb92589a759f1a53a3287f821312546179
+      - name: controlPlaneOperator.logLevel
+        value: debug
       valueFiles:
       - values.yaml
   destination:
