added experimentalEnv variable for bcloud staging cluster operator (demo only)
Signed-off-by: Alen Haric (deusxanima) aharic88@gmail.com

--- a/examples/argocd/bcloud/bel/linkerd-buoyant/linkerd-buoyant.yaml
+++ b/examples/argocd/bcloud/bel/linkerd-buoyant/linkerd-buoyant.yaml
@@ -27,6 +27,8 @@ spec:
         value: 0677edf6dcd92c2726090e492b633deb92589a759f1a53a3287f821312546179
       - name: controlPlaneOperator.logLevel
         value: debug
+      - name: identity.experimentalEnv[0].name: ENVIRONMENT
+        value: staging
       valueFiles:
       - values.yaml
   destination:
