--- a/examples/argocd/bcloud/bel/linkerd-buoyant/linkerd-buoyant-org-credentials-secret.yaml
+++ b/examples/argocd/bcloud/bel/linkerd-buoyant/linkerd-buoyant-org-credentials-secret.yaml
@@ -7,5 +7,5 @@ metadata:
     app.kubernetes.io/part-of: linkerd-buoyant
 type: Opaque
 data:
-  client_id: $CLIENT_ID
-  client_secret: $CLIENT_SECRET
+  client_id: VTU2MWdzblo5UENiN01HLQo=
+  client_secret: MDY3N2VkZjZkY2Q5MmMyNzI2MDkwZTQ5MmI2MzNkZWI5MjU4OWE3NTlmMWE1M2EzMjg3ZjgyMTMxMjU0NjE3OQo=
