Signed-off-by: Alen Haric (deusxanima) aharic88@gmail.com

--- a/examples/argocd/bcloud/bel/linkerd-buoyant/values.yaml
+++ b/examples/argocd/bcloud/bel/linkerd-buoyant/values.yaml
@@ -6,12 +6,7 @@ metadata:
   agentName: alen-argo-cluster
 
 agent:
-  apiAddress: api.staging-buoyant.cloud:443
+  apiAddress: api.buoyant.cloud:443
 
 api:
-  apiAddress: api.staging-buoyant.cloud:443
-
-identity:
-  experimentalEnv:
-  - name: ENVIRONMENT
-    value: staging
+  apiAddress: api.buoyant.cloud:443
