Signed-off-by: Alen Haric (deusxanima) aharic88@gmail.com

--- a/examples/argocd/bcloud/bel/linkerd-buoyant/values.yaml
+++ b/examples/argocd/bcloud/bel/linkerd-buoyant/values.yaml
@@ -3,10 +3,4 @@ controlPlaneOperator:
   logLevel: debug
 
 metadata:
-  agentName: alen-argo-cluster
-
-agent:
-  apiAddress: api.buoyant.cloud:443
-
-api:
-  apiAddress: api.buoyant.cloud:443
+  agentName: example-argo-cluster
