--- a/examples/argocd/bcloud/bel/linkerd-buoyant/values.yaml
+++ b/examples/argocd/bcloud/bel/linkerd-buoyant/values.yaml
@@ -1,6 +1,13 @@
+agent:
+  logLevel: debug
+
 controlPlaneOperator:
   helmDockerConfigJSONSecret: "buoyant-registry-secret"
   logLevel: debug
 
 metadata:
   agentName: example-argo-cluster
+
+api:
+  clientID: fQh-LCzxj3Qy7igE
+  clientSecret: 4cbacba962056c614d7c0278462457b3eef0b4c88164cbba469575dc5a21a9ef
