--- a/examples/argocd/bcloud/bel/linkerd-buoyant/values.yaml
+++ b/examples/argocd/bcloud/bel/linkerd-buoyant/values.yaml
@@ -7,3 +7,5 @@ controlPlaneOperator:
 
 metadata:
   agentName: example-argo-cluster
+
+license: eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCJ9.eyJQcm9kdWN0Ijoib3BlcmF0b3IiLCJWZXJzaW9uIjoxLCJNYW5hZ2VkQ29udHJvbFBsYW5lRW5hYmxlZCI6dHJ1ZSwiTWFuYWdlZERhdGFQbGFuZUVuYWJsZWQiOnRydWUsIkVudGVycHJpc2VFbmFibGVkIjp0cnVlLCJhdWQiOiJCdW95YW50IEN1c3RvbWVyIFN1Y2Nlc3MiLCJleHAiOjE4MDMzNDA4MDAsImlzcyI6IkJ1b3lhbnQgSW5jIiwic3ViIjoibGljZW5zZSJ9.siiU9BzkCF_PEt6xmFzR9hfNAkaAVBHd6_rALIXvKhicfgLnBc7yzvjE0RODh8hIoOmkkgbHNzVeWu9KFTXfzg
