Fixed dir structure
Signed-off-by: Alen Haric (deusxanima) aharic88@gmail.com

--- a/examples/argocd/bcloud/bel/linkerd-buoyant/linkerd-control-plane/controlplane.yaml
+++ b/examples/argocd/bcloud/bel/linkerd-buoyant/linkerd-control-plane/controlplane.yaml
@@ -1,7 +1,7 @@
 apiVersion: linkerd.buoyant.io/v1alpha1
 kind: ControlPlane
 metadata:
-  name: cp-update
+  name: linkerd-control-plane-crd
 spec:
   components:
     linkerd:
